--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -664,7 +664,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Use ZIP Compression on LAN 
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
-preferences.dialog.verbose=Enable verbose logging
+preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Exit behavior
 preferences.dialog.xbehavior.exit=Exit program
@@ -884,14 +884,13 @@ transfers.searching=Searching...
 transfers.to=To
 
 transfer.problem.title=File Transfer Problem
-transfer.problem.transfer.broken=The transfer was broken for {0} from {1}
 transfer.problem.old.upload=Already received download request for {0} from {1}
 transfer.problem.broken.download=The transfer download was broken for {0}
 transfer.problem.broken.upload==The transfer upload was broken for {0}
 transfer.problem.transfer.exception=There was a TransferException for {0}: {1}
 transfer.problem.invalid.part=Received invalid part request {0}
 transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}: {1}
-transfer.problem.io.exception=There was an IOException for {0}: {1}
+transfer.problem.io.exception=Unable to read/write {0}: {1}
 transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}: {1}
 transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
 transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
