Remove webserivce wording

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -67,9 +67,9 @@ about.dialog_contributers_tab=team
 about.key=h
 about.name=Help
 
-aboutwebservice.description=Opens the WebService of the webservice in default browser
+aboutwebservice.description=Opens the Online Storage in default browser
 aboutwebservice.key=A
-aboutwebservice.name=About WebService
+aboutwebservice.name=About Online Storage
 
 addfriend.description=Adds user to friendlist
 addfriend.key=f
@@ -482,7 +482,7 @@ member.non_mutual_friend=None mutual friend
 member.onlan=Onlan
 member.supernode=Supernode
 
-mirrorfolder.description=Setup the WebService to backup a folder
+mirrorfolder.description=Setup the Online Storage to backup a folder
 mirrorfolder.key=B
 mirrorfolder.name=Backup Folder
 
@@ -564,7 +564,7 @@ openfile.description=Open (Run) selected file
 openfile.key=O
 openfile.name=Open file
 
-openwebservice.description=Opens the WebService in the default browser
+openwebservice.description=Opens the Online Storage in the default browser
 openwebservice.key=B
 openwebservice.name=Open in Browser
 
@@ -729,11 +729,11 @@ quickinfo.user.isconnectedinet=Is on the Internet
 quickinfo.user.isconnectedlan=Is on LAN
 quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
-quickinfo.webservice.connected=Connected to the PowerFolder WebService
+quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-quickinfo.webservice.title=Online Storage - WebService
+quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+quickinfo.webservice.notsetup=Online Storage not configured yet
+quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -969,11 +969,11 @@ wizard.syncpcspanel.selecttarget=Please select local target directory
 wizard.syncpcspanel.setup=Setup a new mirror
 wizard.syncpcspanel.takepart=Take part in a mirror
 wizard.syncpcspanel.title=Mirror
-wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 wizard.webservice.learnmore=What is the PowerFolder WebService?
 wizard.webservice.login=Online Storage Login
-wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
-wizard.webservice.mirrorsetup=Backup Folder by WebService
+wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Register new Account
 wizard.webservice.username=Email
