License key abuse checker finalizations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -545,8 +545,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Unable to connect to a source
 
 onlinelabel.connecting=Connecting
 onlinelabel.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
-onlinelabel.disabled=Disabled (Extensive use detected)
-onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
+onlinelabel.disabled=Disabled
+onlinelabel.disabled.text=PowerFolder is currently disabled.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=You are offline. Not connected to any user on the PowerFolder network
 onlinelabel.online=Online
