--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,12 @@
 # http://www.powerfolder.com
 #
 
+systemservice.options.title=PowerFolder System Service
+systemservice.options.install=Install
+systemservice.options.uninstall=Uninstall
+systemservice.options.info1=Use these options install/uninstall
+systemservice.options.info2=PowerFolder as system service.
+
 chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 abortcopy.description=Abort the copy process
 abortcopy.key=A
