Cleanups and update. Added info about pro version

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -6,24 +6,19 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
 
-systemservice.options.title=PowerFolder System Service
-systemservice.options.install=Install
-systemservice.options.uninstall=Uninstall
-systemservice.options.info1=Use these options install/uninstall
-systemservice.options.info2=PowerFolder as system service.
-
-chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -31,15 +26,6 @@ abortcopy.name=Abort
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
-
-pro.http.options.title=HTTP Connection settings
-pro.http.options.withauth=With authorization
-pro.http.options.directconnect=Direct connection to the internet
-pro.http.options.httpproxy=HTTP-Proxy
-pro.http.options.host=Hostname
-pro.http.options.port=Port
-pro.http.options.username=Username
-pro.http.options.password=Password
 
 aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
@@ -93,6 +79,7 @@ buypro.name=Buy Pro
 
 chat.notification.option1=Answer
 chat.notification.option2=Close
+chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -603,9 +590,9 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
-preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dyndns=My (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
@@ -681,6 +668,14 @@ previewfiles.description=Preview files in this Folder
 previewfiles.key=P
 previewfiles.name=Preview
 
+pro.http.options.directconnect=Direct connection to the internet
+pro.http.options.host=Hostname
+pro.http.options.httpproxy=HTTP-Proxy
+pro.http.options.password=Password
+pro.http.options.port=Port
+pro.http.options.title=HTTP Connection settings
+pro.http.options.username=Username
+pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
 pro.security.high=High
 pro.security.high_info=High security (default)\:
@@ -856,6 +851,12 @@ syncprofile.manualdownload.name=Manual download
 syncprofile.projectwork.name=Project work
 syncprofile.syncpcs.name=Mirror
 
+systemservice.options.info1=Use these options install/uninstall
+systemservice.options.info2=PowerFolder as system service.
+systemservice.options.install=Install
+systemservice.options.title=PowerFolder System Service
+systemservice.options.uninstall=Uninstall
+
 systray.exit=Exit
 systray.hide=Hide
 systray.powerfolder=PowerFolder v{0}
@@ -875,6 +876,22 @@ title.public.folder=Public Folder
 title.public.folders=Public Folders
 title.search.users=Find Friends
 
+transfer.problem.broken.download=The transfer download was broken for {0}
+transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+transfer.problem.general.exception=There was an Exception for {0}\: {1}
+transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+transfer.problem.invalid.part=Received invalid part request {0}
+transfer.problem.io.exception=Unable to read/write {0}\: {1}
+transfer.problem.md5.error=There was an MD5-Hash error for {0}
+transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+transfer.problem.old.upload=Already received download request for {0} from {1}
+transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+transfer.problem.title=File Transfer Problem
+transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+
 transfers.completed=completed
 transfers.eta=ETA
 transfers.from=From
@@ -887,22 +904,6 @@ transfers.queued=queued
 transfers.requested=requested
 transfers.searching=Searching...
 transfers.to=To
-
-transfer.problem.title=File Transfer Problem
-transfer.problem.old.upload=Already received download request for {0} from {1}
-transfer.problem.broken.download=The transfer download was broken for {0}
-transfer.problem.broken.upload==The transfer upload was broken for {0}
-transfer.problem.transfer.exception=There was a TransferException for {0}: {1}
-transfer.problem.invalid.part=Received invalid part request {0}
-transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}: {1}
-transfer.problem.io.exception=Unable to read/write {0}: {1}
-transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}: {1}
-transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
-transfer.problem.illegal.chunk=Received illegal chunk for {0}: {1}
-transfer.problem.md5.error=There was an MD5-Hash error for {0}
-transfer.problem.general.exception=There was an Exception for {0}: {1}
 
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
