#130 - add transfer problems tab

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -4,6 +4,7 @@
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
 cleardompleteddownloads.icon=icons/Clear.gif
+clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
 #disablesilentmode.icon=icons/ScansDisabled.gif
 #enablesilentmode.icon=icons/SyncMode.gif
@@ -37,6 +38,8 @@ unignorefile.icon=icons/UnForbid.gif
 abortcopy.icon=icons/Forbid.gif
 folderjoin.dialog.icon=icons/FolderAction.gif
 showhidefiledetails.icon=icons/Properties.gif
+transfer_problem.icon=icons/TransferProblem.gif
+transfer_problem_picto.icon=icons/pictos/TransferProblem.png
 
 # Toolbar icons
 join_by_invitation.icon=icons/toolbar/Invitation-48.png
