--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -91,6 +91,10 @@ chatpanel.member_left_folder_at_time={0} left folder at {1}
 cleardompleteddownloads.description=Clears the list of the recently completed downloads
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=Cleanup
+
+clearrecentdownloads.description=Clears the list of the recent problems
+clearrecentdownloads.key=c
+clearrecentdownloads.name=Cleanup
 
 connect.description=Manually connects to a Powerfolder User
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n 
@@ -241,7 +245,7 @@ filenameproblem.to_long.description=The filename is longer than 255 characters,\
 
 findfriends.description=Start searching for new friends
 findfriends.key=F
-findfriends.name=Find new Friends
+findfriends.name=Find New Friends
 
 folder.check_path_length.never_show_again=Do not ask this again
 folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
@@ -267,7 +271,7 @@ foldercreate.error.already_taken=Base directory already taken by folder '{0}'\n'
 foldercreate.error.it_is_base_dir=Unable to open folder on directory '{0}'. It is the PowerFolder base directory for all folders\!
 foldercreate.error.unable_to_create=Unable to create directory '{0}'
 foldercreate.error.unable_to_open=Unable to open local directory '{0}'. Seems to be a file \!
-foldercreate.key=s
+foldercreate.key=N
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of folder should not be empty
 foldercreate.nameempty.title=Foldername required
@@ -298,7 +302,7 @@ folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=Leave folder {0} ?
 folderleave.dialog.title=Leave folder {0} ?
 folderleave.key=L
-folderleave.name=Leave folder
+folderleave.name=Leave Folder
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
@@ -416,6 +420,8 @@ general.today=today
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
+general.transfer.problems=Transfer Problems
+general.transfer.problem=Transfer Problem
 general.webservice=Online Storage
 general.yesterday=yesterday
 
@@ -425,7 +431,7 @@ hideoffline.name=Hide offline users
 
 ignorefile.description=File(s) will not be downloaded/shared 
 ignorefile.key=I
-ignorefile.name=Add file to Ignore
+ignorefile.name=Add File to Ignore
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown 
@@ -509,17 +515,17 @@ navigationbuttons.up_to=Up to {0}
 
 navtree.me=me
 navtree.node=Node {0}
-navtree.onlinenodes=Connected users ({0})
+navtree.onlinenodes=Connected Users ({0})
 navtree.recyclebin_size=Recycle Bin ({0})
 navtree.title=Navigation
 
-networkstatisticspanel.connected_users=Connected Users
-networkstatisticspanel.known_users=Known Users
+networkstatisticspanel.connected_users=Connected users
+networkstatisticspanel.known_users=Known users
 networkstatisticspanel.local_folder_count=Number of local folders (joined)
 networkstatisticspanel.local_folders_size=Total size of all local files
 networkstatisticspanel.number_of_local_files=Total number of local files
 networkstatisticspanel.number_of_public_files=Total number of available files 
-networkstatisticspanel.online_users=Online Users
+networkstatisticspanel.online_users=Online users
 networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Total size of all available files
 
@@ -548,13 +554,13 @@ open_local_folder.description=Opens folder in your operating systems file explor
 open_local_folder.key=F
 open_local_folder.name=Open Folder
 
-openchat.description=Opens a chat window to the user or to all users of folder 
+openchat.description=Opens a chat window to the user or to all users of folder
 openchat.key=c
 openchat.name=Chat
 
 openfile.description=Open (Run) selected file
 openfile.key=O
-openfile.name=Open file
+openfile.name=Open File
 
 openwebservice.description=Opens the Online Storage in the default browser
 openwebservice.key=B
@@ -590,7 +596,6 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
-preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=My (dynamic) DNS
@@ -723,6 +728,8 @@ quickinfo.root.insync=All Folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
+quickinfo.transfer.problems.title=Transfer Problems Status
+quickinfo.transfer.problems.detected={0} problem(s) recently detected
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
@@ -773,13 +780,13 @@ restore.busy.title=Restoring file(s)
 
 restorefile.description=Undelete file
 restorefile.key=r
-restorefile.name=Restore file
+restorefile.name=Restore File
 
-rootpanel.connected_users=Connected users
+rootpanel.connected_users=Connected Users
 rootpanel.friends=Friends
 
 scanallfolders.description=Synchronizes all Folders now
-scanallfolders.key=a
+scanallfolders.key=F
 scanallfolders.name=Sync Folders
 
 scanfolder.description=Checks all folders for file changes now
@@ -799,7 +806,7 @@ sendinvitation.example_emailaddress=email@domain.com
 sendinvitation.folder.text=Send invitation to
 sendinvitation.folder.title=Send Invitation
 sendinvitation.key=i
-sendinvitation.name=Send invitation
+sendinvitation.name=Send Invitation
 sendinvitation.placetostore=Choose a place to store invitation
 sendinvitation.subject=Invitation to the PowerFolder '{0}'
 sendinvitation.toclipboard=To clipboard...
@@ -981,7 +988,7 @@ wizard.webservice.login=Online Storage Login
 wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Password
-wizard.webservice.register=Register new Account
+wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
 wizard.whattodo.bordertext=Choose your action
 wizard.whattodo.filesharing=Share Files
