Added info about recently complete download on folder inof

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our official webpage under
+# There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -415,11 +415,11 @@ general.synchonisation=Synchronisation
 general.syncprofile=Sync profile
 general.time=%02d\:%02d\:%02d
 general.today=today
+general.transfer.problem=Transfer Problem
+general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
-general.transfer.problems=Transfer Problems
-general.transfer.problem=Transfer Problem
 general.webservice=Online Storage
 general.yesterday=yesterday
 
@@ -707,6 +707,7 @@ publicfolders.size=Size
 quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
 quickinfo.download.title=Download Status
+quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
@@ -726,8 +727,8 @@ quickinfo.root.insync=All Folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
-quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.transfer.problems.detected={0} problem(s) recently detected
+quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
