--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -982,7 +982,7 @@ wizard.syncpcspanel.setup=Setup a new mirror
 wizard.syncpcspanel.takepart=Take part in a mirror
 wizard.syncpcspanel.title=Mirror
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-wizard.webservice.learnmore=What is the PowerFolder WebService?
+wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
 wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
