#124 And re-enabled features that actually where used before...

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -995,3 +995,7 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
+
+wizard.sendinvitations.invitationtext=Message to the recipient:
+wizard.sendinvitations.invitationtextsample=Welcome to the folder {0}
+folderjoin.invitationtext=Message from {0}:
