#571 - integrate transfer problems in download panel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -97,7 +97,7 @@ clearrecentdownloads.key=c
 clearrecentdownloads.name=Cleanup
 
 connect.description=Manually connects to a Powerfolder User
-connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n 
+connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
 connect.dialog.title=Manually connect to a powerfolder user
 connect.key=c
 connect.name=Connect
@@ -345,7 +345,7 @@ folderpanel.settingstab.removebutton.name=Remove
 folderpanel.settingstab.title=Settings
 folderpanel.settingstab.userecyclebin=Use recycle bin
 
-folderrepository.warnonclose.neveraskagain=Never ask this again 
+folderrepository.warnonclose.neveraskagain=Never ask this again
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
 
@@ -406,7 +406,7 @@ general.ok.key=O
 general.overwrite=Overwrite
 general.overwrite_all=Overwrite all
 general.powerfolder=PowerFolder
-general.recyclebin=Recycle Bin 
+general.recyclebin=Recycle Bin
 general.show=show
 general.show_never_again=Do not show this message again
 general.size=Size
@@ -415,24 +415,24 @@ general.synchonisation=Synchronisation
 general.syncprofile=Sync profile
 general.time=%02d\:%02d\:%02d
 general.today=today
-general.transfer.problem=Transfer Problem
-general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
+general.transfer.problems=Transfer Problems
+general.transfer.problem=Transfer Problem
 general.webservice=Online Storage
 general.yesterday=yesterday
 
-hideoffline.description=The offline users will be filtered from this search result 
+hideoffline.description=The offline users will be filtered from this search result
 hideoffline.key=H
 hideoffline.name=Hide offline users
 
-ignorefile.description=File(s) will not be downloaded/shared 
+ignorefile.description=File(s) will not be downloaded/shared
 ignorefile.key=I
 ignorefile.name=Add File to Ignore
 
 imagefileinfo.resolution=Resolution
-imagefileinfo.unknown=Unknown 
+imagefileinfo.unknown=Unknown
 
 infoside.title=Information
 
@@ -460,7 +460,7 @@ linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=Dual ISDN (128Kbit up)
 linespeed.isdnspeed64=ISDN (64Kbit up)
 linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s 
+linespeed.lan100=LAN 100mbit/s
 linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=Unlimited
 linespeed.uploadspeed=Upload limit
@@ -522,7 +522,7 @@ networkstatisticspanel.known_users=Known users
 networkstatisticspanel.local_folder_count=Number of local folders (joined)
 networkstatisticspanel.local_folders_size=Total size of all local files
 networkstatisticspanel.number_of_local_files=Total number of local files
-networkstatisticspanel.number_of_public_files=Total number of available files 
+networkstatisticspanel.number_of_public_files=Total number of available files
 networkstatisticspanel.online_users=Online users
 networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Total size of all available files
@@ -605,14 +605,14 @@ preferences.dialog.dyndnsLoginPanel=Login
 preferences.dialog.dyndnsPassword=Password
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
 preferences.dialog.dyndnsUpdateButton=Force Update
-preferences.dialog.dyndnsUpdateError=DynDns service returned an error\: 
+preferences.dialog.dyndnsUpdateError=DynDns service returned an error\:
 preferences.dialog.dyndnsUpdateTitle=DynDns Updater
 preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
-preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
+preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Username
 preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
-preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
+preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host.
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Find port
@@ -640,13 +640,13 @@ preferences.dialog.plugin.status_disabled=Disabled
 preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.randomPort=Automatically find a port
-preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
-preferences.dialog.restarttext=Some changes require PowerFolder to restart.\nDo you want to restart now?\n 
+preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
+preferences.dialog.restarttext=Some changes require PowerFolder to restart.\nDo you want to restart now?\n
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+preferences.dialog.silentthrottle=Silentmode bandwidth throttle
 preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.smalltoolbar=Use small toolbar icons
 preferences.dialog.startwithwindows=Start PowerFolder with Windows
@@ -657,7 +657,7 @@ preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.userecyclebin=Use recycle bin (default)
-preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+preferences.dialog.useziponlan=Use ZIP Compression on LAN
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
@@ -707,7 +707,6 @@ publicfolders.size=Size
 quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
 quickinfo.download.title=Download Status
-quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
@@ -727,8 +726,8 @@ quickinfo.root.insync=All Folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
-quickinfo.transfer.problems.detected={0} problem(s) recently detected
 quickinfo.transfer.problems.title=Transfer Problems Status
+quickinfo.transfer.problems.detected={0} problem(s) recently detected
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
@@ -876,7 +875,7 @@ systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Friends
-title.my.folders=My Folders 
+title.my.folders=My Folders
 title.network.statistics=Network Statistics
 title.public.folder=Public Folder
 title.public.folders=Public Folders
@@ -982,7 +981,7 @@ wizard.syncpcspanel.setup=Setup a new mirror
 wizard.syncpcspanel.takepart=Take part in a mirror
 wizard.syncpcspanel.title=Mirror
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-wizard.webservice.learnmore=What is the PowerFolder Online Storage?
+wizard.webservice.learnmore=What is the PowerFolder WebService?
 wizard.webservice.login=Online Storage Login
 wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
@@ -995,7 +994,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
-
-wizard.sendinvitations.invitationtext=Message to the recipient:
-wizard.sendinvitations.invitationtextsample=Welcome to the folder {0}
-folderjoin.invitationtext=Message from {0}:
