- Added reconnection queue size to stats panel - Tuned reconnection queue building

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -526,6 +526,7 @@ networkstatisticspanel.number_of_public_files=Total number of available files
 networkstatisticspanel.online_users=Online users
 networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Total size of all available files
+networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Unable to request node information
 nodeinfo.requesting=Requesting node information...
