Fix translations and multi selects

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -882,21 +882,20 @@ title.public.folder=Public Folder
 title.public.folders=Public Folders
 title.search.users=Find Friends
 
-transfer.problem.broken.download=The transfer download was broken for {0}
-transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-transfer.problem.general.exception=There was an Exception for {0}\: {1}
-transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-transfer.problem.invalid.part=Received invalid part request {0}
-transfer.problem.io.exception=Unable to read/write {0}\: {1}
-transfer.problem.md5.error=There was an MD5-Hash error for {0}
-transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
-transfer.problem.old.upload=Already received download request for {0} from {1}
-transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+transfer.problem.broken.download=The transfer download was broken
+transfer.problem.broken.upload=The transfer upload was broken
+transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+transfer.problem.general.exception=There was an Exception\: {0}
+transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+transfer.problem.invalid.part=Received invalid part request\: {0}
+transfer.problem.io.exception=Unable to read/write\: {0}
+transfer.problem.md5.error=There was an MD5-Hash error
+transfer.problem.old.upload=Already received download request from {0}
+transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+transfer.problem.temp.file.write=Unable to write to tempfile {0}
 transfer.problem.title=File Transfer Problem
-transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=completed
 transfers.eta=ETA
