#563 - dialog asking whether to move content when moving folder

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -326,6 +326,8 @@ folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_size=Total size
+folderpanel.hometab.move_content.title=Move folder contents
+folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
