#564 Correct spelling of cleardompleteddownloads --> clearcompleteddownloads. Remove ClearCompletedDownloadAction from TransferManagerModel. Remove downloadMenu from ControlQuarter. Change clearCompletedDownload in Transfermanager to take Download parameter. Add ClearCompletedAction to DownloadsPanel. Enable ClearCompletedAction if rows selected and trigger clearCompletedDownload for selected rows.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -3,7 +3,7 @@
 
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
-cleardompleteddownloads.icon=icons/Clear.gif
+clearcompleteddownloads.icon=icons/Clear.gif
 clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
 #disablesilentmode.icon=icons/ScansDisabled.gif
