--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} disconnected at {1}
 chatpanel.member_joined_folder_at_time={0} joined folder at {1}
 chatpanel.member_left_folder_at_time={0} left folder at {1}
 
-cleardompleteddownloads.description=Clears the list of the recently completed downloads
-cleardompleteddownloads.key=c
-cleardompleteddownloads.name=Cleanup
+clearcompleteddownloads.description=Clears the list of the recently completed downloads
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=Cleanup
 
 clearrecentdownloads.description=Clears the list of the recent problems
 clearrecentdownloads.key=c
