#581 AND Tidied up the native library stuff a bit.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -996,3 +996,6 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
+
+preferences.dialog.deltasync=Use delta sync
+preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
